Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36602

touch doesn't work with weston compositor due to missing touch_frame callback

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 5.2.1, 5.4.0
    • QPA: Wayland
    • None
    • Arch Linux with wayland 1.4.0 and weston 1.4.0
      Qt release branch, qtwayland stable branch

      I noticed that touch was not working. First I found this problem https://codereview.qt-project.org/#change,77229 which prevented the touch device being registered. Second is that if I put a printf in QWaylandInputDevice::Touch::touch_frame I can see that it's never called. So I googled and found this

      http://stackoverflow.com/questions/18201614/touch-doesnt-work-with-qt5-1-1-when-used-with-wayland-qtwayland

      It's like never getting an EV_SYN from the evdev interface (but I can see SYN_REPORT with evtest). I wonder if we could get by without the touch_frame callback? Otherwise it sounds like Qt and weston will not get along unless weston is fixed to send it?

        1. IMG_0099.mov
          3.12 MB
        2. no-interaction.MOV
          2.52 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes